# Nexus

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
configs/: models.yaml  nexus.toml
docker/: Dockerfile  docker-compose.yaml
docs/: api.md  architecture.md  deployment.md
docs/tests/integration/: mod.rs
docs/tests/load/: mod.rs
docs/tests/unit/: mod.rs
scripts/: benchmark.sh  setup.sh
src/: cache.rs  config.rs  load_balancer.rs  main.rs  models.rs  orchestrator.rs  server.rs
src/api/: inference.rs  metrics.rs  mod.rs  models.rs
src/config/: mod.rs
src/core/: batcher.rs  load_balancer.rs  mod.rs  orchestrator.rs
src/models/: manager.rs  mod.rs  registry.rs  runner.rs
src/observability/: health.rs  metrics.rs  mod.rs
